@@ -73,3 +73,4 @@ Inheritance of the system path into Webmin's search path can be set on the Opera
 The nice level (CPU priority) of all cron and other background jobs run by Webmin can now be set on the Advanced Options page.
 ---- Changes since 1.400 ----
 Use the gzip -d command to extract Webmin modules, if gunzip is missing (such as on Windows).
+Users with too many failed logins can be locked until the administrator unlocks them.
